# agg

./: Cargo.toml  LICENSE  README.md  focus_on_itest.sh
doc/: A close look at the sRGB formula.html  add.c  algorithm.txt  bit.c  fp.c  ft.c  rgb.py  text.c  text.py
doc/A close look at the sRGB formula_files/: main.css
src/: affine_transform.rs  alphamask.rs  base.rs  buffer.rs  cell.rs  clip.rs  color.rs  conv_stroke.rs  gallery.rs  lib.rs  line_interp.rs  math.rs  outline.rs  outline_aa.rs  path_storage.rs  paths.rs  pixfmt.rs  ppm.rs  raster.rs  render.rs  scan.rs  stroke.rs  text.rs  transform.rs  workflow.rs
tests/: aa_test.rs  agg_test_01.ppm  agg_test_02.ppm  agg_test_03.ppm  agg_test_04.ppm  agg_test_05.ppm  agg_test_06.ppm  agg_test_07.ppm  agg_test_08.ppm  agg_test_09.ppm  agg_test_10.ppm  agg_test_11.ppm  agg_test_12.ppm  agg_test_13.ppm  agg_test_15.ppm  agg_test_16.ppm  assets.rs  component_rendering_000.ppm  component_rendering_000.rs  component_rendering_128.ppm  component_rendering_128.rs  component_rendering_255.ppm  component_rendering_255.rs  lion.ppm  lion.rs  lion.txt  lion_cw.ppm  lion_cw.rs  lion_cw_aa.ppm  lion_cw_aa.rs  lion_cw_aa_srgba.ppm  lion_cw_aa_srgba.rs  lion_outline.ppm  lion_outline.rs  lion_outline_width1.ppm  lion_outline_width1.rs  lion_png.rs  little_black_triangle.ppm  outline.rs  outline_aa.ppm  (+31 more)
