[package]
name = "agg"
version = "0.1.1"
authors = ["Brian Savage <savage13@gmail.com>"]
edition = "2018"
repository = "https://github.com/savge13/agg"
documentation = "https://docs.rs/agg"
homepage = "https://github.com/savage13/agg"
license = "BSD-2-Clause"
description = "High-quality 2D graphics engine based on Anti-grain Geometry"

[dependencies]
freetype-rs = "0.19.0"

[dependencies.image]
version = "0.20.1"
default-features = false
features = ["png_codec", "gif_codec", "gif_codec",
            "pnm", "bmp", "jpeg"]
